PCS BAckup 26Dec2023/Backup-Source/objects/Vision_Adoption_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Vision_Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Back Orders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Sub_Module__c</fullName>
        <label>Sub Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rx Back Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visited_Time__c</fullName>
        <label>Visited Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Visited_Visited_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visited User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Adoption_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Adoption Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADM-{00000000}</displayFormat>
        <label>Adoption Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adoption Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>